Сделана авторизация, регистрация, с хэшированием пароля.
